--- a/npkpir_23/web/ksiegowa/sub/vatzest_2.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/vatzest_2.xhtml
@@ -7,7 +7,7 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-    <f:event type="preRenderView" listener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt)}"/>
+    <f:event type="preRenderView" listener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt, false)}"/>
     
     
     <p:tabView value="#{ewidencjaVatView.ewidencje}"  var="item">
