--- a/npkpir_23/web/wspolny/sub/layoutFakturaRozrachunki/west.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutFakturaRozrachunki/west.xhtml
@@ -49,8 +49,7 @@
                 <p:menu>
                     <p:menuitem value="PIT"  outcome="pitoblicz" icon="ui-icon-circle-arrow-e"/>
                     <p:menuitem value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" action="#{ewidencjaVatView.przekierowanieEwidencji()}" update="westWpis" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}">
-                        <f:actionListener binding="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt)}"/>
-                        <f:actionListener binding="#{ewidencjaVatView.drukujPdfEwidencje()}"/>
+                        <f:actionListener binding="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt, false)}"/>
                         
                     </p:menuitem>
                     <p:menuitem value="zamknięcie miesiąca"  outcome="zamkniecie" icon="ui-icon-circle-arrow-e"/>
