--- a/npkpir_23/web/ksiegowa/ksiegowaImportSprzedazy.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaImportSprzedazy.xhtml
@@ -59,7 +59,7 @@
                             </p:panelGrid>
                             <p:dataTable lazy="false"   var="wpis" value="#{importSprzedazyView.dokumenty}" id="dokumentyLista" 
                                           rowIndexVar="index" 
-                                          style="max-width: 1400px; margin-top: 10px; max-height: 600px; overflow-y: scroll;" 
+                                          style="max-width: 1450px; margin-top: 10px; max-height: 600px; overflow-y: scroll;" 
                                           widgetVar="dokTable" rowKey="#{wpis.idDok}"
                                           rowStyleClass="#{wpis.rodzajedok.rodzajtransakcji eq 'sprzedaz' ? 'old' : (wpis.netto lt 0 ? 'korekta' : null)}" 
                                           emptyMessage="Nie pobrano jeszcze żadnych danych z pliku jpk"
@@ -82,8 +82,9 @@
                                 <p:column id="idColumn" headerText="#{mgs.numerkolejny}" sortBy="#{wpis.nrWpkpir}"  style="width: 20px; text-align: center;">  
                                     <h:outputText styleClass="lpwiersza" value="#{index+1}" />
                                 </p:column>
-                                <p:column id="dataColumn" headerText="data wyst" filterBy="#{wpis.dataWyst}" filterStyle="display : none;" filterMatchMode="contains" sortBy="#{wpis.dataWyst}"  style="width: 50px; min-width: 70px;">  
-                                    <h:outputText value="#{wpis.dataWyst.substring(2)}"/>
+                                <p:column id="dataColumn" headerText="data wyst" filterBy="#{wpis.dataWyst}" filterStyle="display : none;" filterMatchMode="contains" sortBy="#{wpis.dataWyst}"  style="width: 80px;">  
+                                    <h:outputText value="#{wpis.dataWyst}"  rendered="#{wpis.netto ne 0.0}"/>
+                                    <h:outputText value="#{wpis.dataWyst}"  rendered="#{wpis.netto eq 0.0}" style="color:red;"/>
                                 </p:column>
                                 <p:column id="kontrColumn" headerText="#{mgs.kontrahent}" filterBy="#{wpis.kontr.npelna}" width="220"
                                           filterStyle="width:180px;" filterMatchMode="contains" sortBy="#{wpis.kontr.npelna}">  
@@ -94,18 +95,19 @@
                                     <h:outputText value=" #{wpis.kontr.miejscowosc}"  rendered="#{wpis.kontr.nip eq '0000000000'}"/>
                                     <h:outputText value=" NIP - #{wpis.kontr.nip}"  rendered="#{wpis.kontr.npelna eq 'nie znaleziono firmy w bazie Regon'}"/>
                                 </p:column>
-                                <p:column id="rodzTrColumn"  filterBy="#{wpis.rodzajedok}" filterStyle="display : none;" filterMatchMode="contains" 
+                                <p:column id="rodzTrColumn"  filterBy="#{wpis.rodzajedok}" filterMatchMode="contains" 
                                           sortBy="#{wpis.rodzajedok}"  style="width: 5%;text-align: center;">
                                     <h:outputText value="#{wpis.rodzajedok.skrot}"/>
                                 </p:column>
-                                <p:column id="nrWlDokColumn" headerText="nr wł" filterBy="#{wpis.nrWlDk}" filterStyle="display : none;" filterMatchMode="contains" sortBy="#{wpis.nrWlDk}"  style="width: 10%;" >   
-                                    <h:outputText value="#{wpis.nrWlDk}" />
+                                <p:column id="nrWlDokColumn" headerText="nr wł" filterBy="#{wpis.nrWlDk}" filterMatchMode="contains" sortBy="#{wpis.nrWlDk}"  style="width: 10%;" >   
+                                    <h:outputText value="#{wpis.nrWlDk}" rendered="#{wpis.netto ne 0.0}"/>
+                                    <h:outputText value="#{wpis.nrWlDk}" rendered="#{wpis.netto eq 0.0}" style="color:red;"/>
                                 </p:column>
-                                <p:column id="opisColumn" headerText="#{mgs.opis}" filterBy="#{wpis.opis}" filterStyle="display : none;" filterMatchMode="contains" sortBy="#{wpis.opis}" style="width: 10%;">  
+                                <p:column id="opisColumn" headerText="#{mgs.opis}" filterBy="#{wpis.opis}" filterMatchMode="contains" sortBy="#{wpis.opis}" style="width: 10%;">  
                                     <h:outputText value="#{wpis.opis}" styleClass="#{wpis.czyCecha() ? 'zapisZcecha' : null}"/>
                                 </p:column>
                                 <p:column id="nettoColumn" headerText="#{WpisView.vatowiec ? mgs.netto : mgs.kwota}" 
-                                          filterBy="#{wpis.symbolWaluty}" filterMatchMode="contains"  sortBy="#{wpis.symbolWaluty}"  style="width: 60px;">  
+                                          filterBy="#{wpis.symbolWaluty}" filterMatchMode="contains"  sortBy="#{wpis.netto}"  style="width: 60px;">  
                                     <bcf:outputpl value="#{wpis.netto}"/>
                                     <br/>
                                     <bcf:outputpl value="#{wpis.nettoWaluta}" rendered="#{wpis.symbolWaluty ne 'PLN'}"/> 
