naprawy biurowe pit data

--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -635,7 +635,7 @@
                                 <h:outputText value="data sporz."/>
                             </f:facet>
                             <h:outputText value="#{item.datapit}">
-                                <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss" />
+                                <f:convertDateTime pattern="yyyy//MM/dd HH:mm:ss" />
                             </h:outputText>
                         </p:column>
                     </p:dataTable>
