drobne naprawy domowe

--- a/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
+++ b/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
@@ -8,7 +8,7 @@
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <h:outputText value="Podatnik księgowa"/>
     <h:form id="formpodatnicy">
-
+        <p:panel header="Przypordządkowanie ksiegowej do klienta"/>
         <p:outputPanel>
             <p:panelGrid layout="tabular" columns="2" style="width: 250px;">
                 <h:outputText value="rok"/>
