--- a/npkpir_23/web/admin/adminPodatnicy.xhtml
+++ b/npkpir_23/web/admin/adminPodatnicy.xhtml
@@ -28,7 +28,7 @@
                         <!-- panel centralny -->
                         <div class="col-12 md:col-9 lg:col-10 flex flex-column">
                      <ui:include src="sub/menu_wiad.xhtml"/>  <!--  menu contextowe i pole wiadomosci growl-->
-                        <ui:include src="sub/podatnicy.xhtml"/>     <!-- właściwa tablica z danymi z księgi-->
+                        <ui:include src="sub/rentownoscksiegowych.xhtml"/>     <!-- właściwa tablica z danymi z księgi-->
                         </div>
                     </div>
 
