--- a/npkpir_23/web/admin/sub/rentownoscksiegowych.xhtml
+++ b/npkpir_23/web/admin/sub/rentownoscksiegowych.xhtml
@@ -10,12 +10,16 @@
      <h:form id="podatnicy">
      <p:outputPanel style="padding: 10px;">
          <p:panel header="Statystyka księgowych" style="width:1200px;"/>
-         <p:panelGrid layout="tabular" columns="4">
+         <p:panelGrid layout="tabular" columns="6">
         <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>
         <p:selectOneMenu id="rokWpisu" value="#{podatnikKsiegowaView.rok}" style="width: 70px;">
-            <f:selectItems value="#{roki.rokiList}" />
+            <f:selectItems value="#{roki.rokiListString}" />
             <p:ajax event="change" partialSubmit="true"/>
         </p:selectOneMenu>
+         <p:selectOneMenu id="miesiacWpisu" value="#{podatnikKsiegowaView.mc}" style="width: 70px;">
+                    <f:selectItems value="#{mce.mceList}"/>
+                   <p:ajax event="change" partialSubmit="true"/>
+                </p:selectOneMenu>
         <p:selectBooleanCheckbox value="#{podatnikKsiegowaView.bezzerowych}" itemLabel="tylko niezerowe">
             <p:ajax event="change" listener="#{podatnikKsiegowaView.init()}" update="@form"/>
         </p:selectBooleanCheckbox>
