--- a/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
+++ b/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
@@ -8,7 +8,7 @@
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <h:outputText value="Podatnik księgowa"/>
     <h:form id="formpodatnicy">
-        <p:panel header="Przypordządkowanie ksiegowej do klienta"/>
+        <p:panel header="Przyporządkowanie ksiegowej do klienta"/>
         <p:outputPanel>
             <p:panelGrid layout="tabular" columns="2" style="width: 250px;">
                 <h:outputText value="rok"/>
@@ -31,7 +31,7 @@
                     <p:commandButton value="XLS" style="width: 200px;margin: 10px;">
                         <p:dataExporter type="xls" target="formpodatnicy:tabelapodatnicy" fileName="lista" />
                     </p:commandButton>
-                    <p:dataTable lazy="false"  id="tabelapodatnicy" value="#{podatnikKsiegowaShortView.listapodatnikow}" var="item" style="width: 1550px;" 
+                    <p:dataTable lazy="false"  id="tabelapodatnicy" value="#{podatnikKsiegowaShortView.listapodatnikow}" var="item" style="width: 1700px;" 
                                  paginatorAlwaysVisible="true" paginator="true" pageLinks="12" rows="30"
                                  rowIndexVar="index" 
                                  rowStyleClass="#{item.ksiegowa.login.startsWith('mar') ? 'rmarta' : item.ksiegowa.login.startsWith('wda') ? 'rwioletta' : item.ksiegowa.login.startsWith('go') ? 'rmalgosia' : 'rrenata'}">
@@ -42,14 +42,14 @@
                         <p:column headerText="podatnik" width="300" filterBy="#{item.printnazwa}" filterMatchMode="contains">
                             <h:outputText value="#{item.printnazwa}"/>
                         </p:column>
-                        <p:column headerText="księgowa" >
+                        <p:column headerText="księgowa"  filterBy="#{item.ksiegowa.nazwiskoImie}" filterMatchMode="contains" width="200">
 <!--                            <h:outputText value="#{item.ksiegowa.login}"/>-->
-                            <p:selectOneMenu value="#{item.ksiegowa}" style="width: 100px;text-align: center;" converter="#{uzConv}">
+                            <p:selectOneMenu value="#{item.ksiegowa}" style="width: 200px;text-align: center;" converter="#{uzConv}">
                                 <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
-                                <f:selectItems value="#{podatnikKsiegowaShortView.listaksiegowych}" var="loop" itemLabel="#{loop.login}" itemValue="#{loop}"/>
+                                <f:selectItems value="#{podatnikKsiegowaShortView.listaksiegowych}" var="loop" itemLabel="#{loop.nazwiskoImie}" itemValue="#{loop}"/>
                             </p:selectOneMenu>
                         </p:column>
-                        <p:column headerText="księgowa email" width="300" style="text-align: left;">
+                        <p:column headerText="księgowa email" width="250" style="text-align: left;" filterBy="#{item.ksiegowa.email}" filterMatchMode="contains">
                             <h:outputText value="#{item.ksiegowa.email}" />
                                     
                         </p:column>
