guest slowniki poprawki

--- a/npkpir_23/web/guestFaktura/sub/slownik.xhtml
+++ b/npkpir_23/web/guestFaktura/sub/slownik.xhtml
@@ -9,12 +9,12 @@
     <h:form id="form">
     <p:outputPanel>
         <p:panelGrid layout="tabular" columns="1">
-        <p:inputText size="50" value="#{fakturaslownikView.selected.opis}"/>
+        <p:inputText size="100" value="#{fakturaslownikView.selected.opis}"/>
         <p:commandButton value="dodaj" style="width: 120px;margin-top: 10px;" update="form" actionListener="#{fakturaslownikView.dodaj()}"/>
         </p:panelGrid>
     </p:outputPanel>
     <p:outputPanel>
-        <p:dataTable lazy="false"  value="#{fakturaslownikView.lista}" var="item" style="width: 600px; margin-top: 2%;" id="dokLista"
+        <p:dataTable lazy="false"  value="#{fakturaslownikView.lista}" var="item" style="max-width: 1000px; margin-top: 2%;" id="dokLista"
                      rowIndexVar="index" rowKey="#{item.id}"
                          widgetVar="table" emptyMessage="Nie wprowadzono jeszcze żadnych opisów" filterDelay="600"
                          paginator="true" rows="12" paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
