--- a/npkpir_23/web/guestFakturaApple/guestFakturaSlownik.xhtml
+++ b/npkpir_23/web/guestFakturaApple/guestFakturaSlownik.xhtml
@@ -14,8 +14,8 @@
 
             <f:view>
                 <pe:layout fullPage="true" >
-                    <ui:include src="sub/layoutTablica/north.xhtml"/>  <!-- panel polnocny-->
-                    <ui:include src="sub/layoutTablica/west.xhtml"/>   <!-- panel zachodni-->
+                    <ui:include src="sub/layout/north.xhtml"/>  <!-- panel polnocny-->
+                    <ui:include src="sub/layout/west.xhtml"/>   <!-- panel zachodni-->
                     <pe:layoutPane position="center">
                         <p:panel toggleable="true" closable="true" style="width: 90%;">
                             <f:facet name="header">
