--- a/npkpir_23/web/guestFakturaApple/guestFakturaTablica.xhtml
+++ b/npkpir_23/web/guestFakturaApple/guestFakturaTablica.xhtml
@@ -17,7 +17,7 @@
                     <ui:include src="sub/layout/north.xhtml"/>  <!-- panel polnocny-->
                     <ui:include src="sub/layout/west.xhtml"/>   <!-- panel zachodni-->
                     <pe:layoutPane position="center">
-                        <p:panel toggleable="true" closable="true" style="width: 90%;">
+<!--                        <p:panel toggleable="true" closable="true" style="width: 90%;">
                             <f:facet name="header">
                                 <h:outputText value="Strona służy do wyświetlania poszczególnych zapisów w danym miesiącu. Zmiana miesiąca możliwa jest w panelu po lewej."/><br/>
                                 <h:outputText value="Dane po pobraniu mogąć być sortowane. Wystarczy kliknąć na symbol strzałek znajdujących sie obok opisu kolumny."/> <br/>
@@ -27,7 +27,7 @@
                                 <h:outputText value="Po zaznaczeniu dokumentu i wciśnięciu prawego przycisku myszy otrzymujemy dostęp do menu kontekstowego umożliwiającego
                                               m.in drukowanie zaznaczonego dokumentu bądź dodanie go do dokumentów obserwowanych."/>
                             </f:facet>
-                        </p:panel>
+                        </p:panel>-->
                         <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
                         <ui:include src="sub/tablica.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
                     </pe:layoutPane>
