nowe ksiegowanie w admin

--- a/npkpir_23/web/admin/sub/layoutNowy/west.xhtml
+++ b/npkpir_23/web/admin/sub/layoutNowy/west.xhtml
@@ -17,7 +17,8 @@
                     <p:menuitem value="pisma do admina" outcome="pismoadminobrobka" icon="ui-icon-circle-arrow-e" />
                     <p:menuitem value="obsluga ip" outcome="ipobsluga" icon="ui-icon-circle-arrow-e" />
                     <p:menuitem value="statystyka" outcome="adminstatystyka" icon="ui-icon-circle-arrow-e" />
-                    <p:menuitem value="rentowność księg." outcome="adminpodatnicy" icon="ui-icon-circle-arrow-e" />
+                    <p:menuitem value="rentowność księg." outcome="adminrentownosc" icon="ui-icon-circle-arrow-e" />
+                    <p:menuitem value="księgowanie zamyk." outcome="adminksiegowanie" icon="ui-icon-circle-arrow-e" />
                     <p:menuitem value="obroty" outcome="adminstatystykakalkulacja" icon="ui-icon-circle-arrow-e" />
                     <p:menuitem value="kalkulacja" outcome="adminstatystykaobroty" icon="ui-icon-circle-arrow-e" />
                     <p:menuitem value="faktury" outcome="adminstatystykafaktury" icon="ui-icon-circle-arrow-e" />
